# zephyr-ytm32-module

./: README.md  README_zh.md
build-board-uart-poll/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  compile_commands.json  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
build-board-uart-poll/Kconfig/: Kconfig.dts  Kconfig.modules  Kconfig.shield  Kconfig.shield.defconfig  kconfig_module_dirs.cmake
build-board-uart-poll/zephyr/: .cmake.dotconfig.checksum  .config  .config-trace.json  .config-trace.pickle  cmake_install.cmake  edt.pickle  edt.pickle.cmake  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  snippets_generated.cmake  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.stat  zephyr_final.map  zephyr_pre0.elf  zephyr_pre0.map
drivers/: CMakeLists.txt  Kconfig
drivers/clock_control/: CMakeLists.txt  Kconfig  clock_control_ytm32.c
drivers/counter/: CMakeLists.txt  Kconfig  counter_ytm32_lptmr.c
drivers/gpio/: CMakeLists.txt  Kconfig  gpio_ytm32.c
drivers/interrupt_controller/: CMakeLists.txt  Kconfig  intc_ytm32.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  pinctrl_ytm32.c
drivers/serial/: CMakeLists.txt  Kconfig  uart_ytm32.c
drivers/watchdog/: CMakeLists.txt  Kconfig  wdt_ytm32.c
dts/bindings/: vendor-prefixes.txt  ytmicro,ytm32-cgu.yaml  ytmicro,ytm32-gpio.yaml  ytmicro,ytm32-lptmr.yaml  ytmicro,ytm32-pinctrl.yaml  (+2 more)
scripts/: generate_pinctrl.py
zephyr/: CMakeLists.txt  Kconfig  module.yml
(+218 files in other folders)
